# cookiecutter-data-science

./: .rtd-environment.yml  CHANGES.rst  README.md  cookiecutter.json  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
docs/: commands.rst  conf.py  index.rst  project_organization.rst
docs/getting_started/: INSTALL.rst  getting_started.rst
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .rtd-environment.yml  Makefile  README.md  README.rst  environment.yml  setup.cfg  setup.py
{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
{{ cookiecutter.repo_name }}/docs/: commands.rst  conf.py  index.rst  project_organization.rst
{{ cookiecutter.repo_name }}/docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
{{ cookiecutter.repo_name }}/docs/read_docs/: conf_astropy.py  conf_rtd.py
{{ cookiecutter.repo_name }}/src/data/: path_variables.py
{{ cookiecutter.repo_name }}/src/data/scripts_mod/: path_variables.py
{{ cookiecutter.repo_name }}/src/data/utilities_python/: .gitignore  README.md  __init__.py  abundance_matching_vc.py  file_dir_check.py  file_readers.py  geometry.py  get_path.py  magnitude_calc.py  pandas_hdf5.py  sdss_catls_obs.py  spherematch.py  statistics_vc.py
