[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = MNRAS Cookiecutter
package_name     = mnras_cookiecutter
description      = An easy, reasonably standardized, but flexible template for creating paper for the Monthly Notices of the Royal Astronomical Society.
long_description = An easy, reasonably standardized, but flexible template for creating paper for the Monthly Notices of the Royal Astronomical Society.
author_name      = Victor Calderon
author_email     = victor.calderon@vanderbilt.edu
license          = MIT
github_project   = https://github.com/vcalderon2009/MNRAS_Cookiecutter
version          = 0.0.1
url              = https://github.com/vcalderon2009/MNRAS_Cookiecutter
