[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = Cookiecutter Data Science - VC Edition
package_name     = cookiecutter_data_science_vc
description      = A logical, reasonably standardized, but flexible project structure for doing and sharing data science work.
long_description = A logical, reasonably standardized, but flexible project structure for doing and sharing data science work.
author_name      = Victor Calderon
author_email     = victor.calderon@vanderbilt.edu
license          = MIT
github_project   = https://github.com/vcalderon2009/cookiecutter-data-science-vc
version          = 0.0.1
url              = https://github.com/vcalderon2009/cookiecutter-data-science-vc
