[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = {{cookiecutter.repo_name}}
description      = {{cookiecutter.short_description}}
long_description = {{cookiecutter.long_description}}
author           = {{cookiecutter.author_name}}
author_email     = {{cookiecutter.author_email}}
license          = {{cookiecutter.open_source_license}}
github_project   = {{cookiecutter.github_project}}
version          = {{cookiecutter.project_version}}
url              = {{cookiecutter.project_url}}
